# xnat-mrd

./: .gitignore  .pre-commit-config.yaml  README.md  build.gradle
.github/ISSUE_TEMPLATE/: problem.yaml  question.yaml  work.yaml
.github/workflows/: create_release.yaml  linting.yaml  test.yaml  upload_test_data.yaml
python/: fetch_datasets.py  mrd_2_xnat.py  populate_datatype_fields.py  pyproject.toml  requirements.txt
python/src/xnat_mrd/: fetch_datasets.py  ismrmrd.xsd  mrd_2_xnat.py  populate_datatype_fields.py
python/tests/: conftest.py  requirements.txt  test_server.py  utils.py
src/main/java/org/nrg/xnat/mrd/: MrdXnatPlugin.java
src/main/resources/schemas/mrd/: mrd.xsd
src/main/resources/schemas/mrd/display/: mrd_mrdScanData_display.xml
tests/: mrd_2_xnat.py  walkthrough.py
