[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
    {email = "arc.collaborations@ucl.ac.uk", name = "Centre for Advanced Research Computing"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["ismrmrd", "xmlschema", "xnat"]
description = "populate datatype fields"
license = "Apache-2.0"
name = "xnatmrd"
readme = "README.md"
requires-python = "==3.13.*"
version = "0.0.1"

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "types-requests", "xnat4tests"]

[tool.pytest]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.setuptools]
py-modules = ["mrd_2_xnat", "populate_datatype_fields"]
